[gd_scene load_steps=4 format=2]

[ext_resource path="res://fotos/museu.png" type="Texture" id=1]
[ext_resource path="res://scripts/museu.gd" type="Script" id=2]
[ext_resource path="res://fotos/svdqr2xv-900.jpg" type="Texture" id=3]

[node name="museu" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = 99.849
margin_top = 110.0
margin_right = 139.849
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Museu" type="Sprite" parent="Control"]
position = Vector2( 399, 227 )
scale = Vector2( 1.009, 1 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="Control"]
margin_left = 1.151
margin_top = 11.0
margin_right = 49.151
margin_bottom = 31.0
rect_pivot_offset = Vector2( -303, 40 )
text = "voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multi" type="TextureButton" parent="Control"]
self_modulate = Color( 0, 0, 0, 0 )
anchor_right = 5.456
anchor_bottom = 2.225
margin_left = 333.0
margin_top = 273.0
margin_right = 1101.76
margin_bottom = 1260.0
rect_scale = Vector2( 0.166, 0.208 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Control/multi" to="." method="_on_multi_mouse_entered"]
[connection signal="mouse_exited" from="Control/multi" to="." method="_on_multi_mouse_exited"]
[connection signal="pressed" from="Control/multi" to="." method="_on_multi_pressed"]
